--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0"
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.3.5"
   }
 }
